Bug 1483649 - Do not skip display items for flattened effects in ContainerState::FindOpaqueBackgroundColorInLayer r=mattwoodrow

The area covered by flattened effects and their children should be considered in the background color selection to avoid defaulting to canvas background color.

Differential Revision: https://phabricator.services.mozilla.com/D3809

--HG--
extra : moz-landing-system : lando